--- a/YoutubeRPG/YoutubeRPG.csproj
+++ b/YoutubeRPG/YoutubeRPG.csproj
@@ -58,10 +58,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Load\SplashScreen.xml" />
+    <Content Include="Content\ScreenManager\FadeIn.png" />
+    <Content Include="Content\SplashScreen\Gamercrest.png" />
     <Content Include="Icon.ico" />
+    <Content Include="Load\ScreenManager.xml" />
+    <Content Include="Load\SplashScreen.xml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Content\Fonts\Orbitron-Regular.ttf" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
