--- a/YoutubeRPG/YoutubeRPG.csproj
+++ b/YoutubeRPG/YoutubeRPG.csproj
@@ -44,10 +44,14 @@
     <Compile Include="Image.cs" />
     <Compile Include="ImageEffect.cs" />
     <Compile Include="InputManager.cs" />
+    <Compile Include="Menu.cs" />
+    <Compile Include="MenuItem.cs" />
+    <Compile Include="MenuManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenManager.cs" />
     <Compile Include="SplashScreen.cs" />
+    <Compile Include="TitleScreen.cs" />
     <Compile Include="XmlManager.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -62,7 +66,10 @@
     <Content Include="Content\ScreenManager\FadeIn.png" />
     <Content Include="Content\SplashScreen\Gamercrest.png" />
     <Content Include="Icon.ico" />
-    <Content Include="Load\ScreenManager.xml" />
+    <Content Include="Load\Menus\TitleMenu.xml" />
+    <Content Include="Load\ScreenManager.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Load\SplashScreen.xml">
       <SubType>Designer</SubType>
     </Content>
